/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "tools/tradefederation/core/proto/metric_measurement.proto";

option java_package = "com.android.tradefed.result.proto";
option java_outer_classname = "SummaryRecordProto";

package android_summary_record;

// A Summary of the top level information related to an invocation.
message SummaryRecord {

  // The total number of expected test cases.
  int64 num_expected_tests = 1;

  // The total number of executed test cases.
  int64 num_total_tests = 2;

  // The total number of failed test cases.
  int64 num_failed_tests = 3;

  // The total number of failed test runs.
  int64 num_failed_runs = 4;

  // Extra debugging information for the invocation level, if set an invocation
  // failure occurred and this field contains the error.
  string error_message = 5;

  // A short summary message or link associated with the invocation.
  string summary_message = 6;

  // The time at which this invocation started.
  google.protobuf.Timestamp start_time = 7;

  // The time at which this invocation finished.
  google.protobuf.Timestamp end_time = 8;

  // Metadata describing the invocation that was run.
  google.protobuf.Any description = 9;
}